ND CTR, ND RANGE can be controlled by EFIS page

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -1145,7 +1145,7 @@ POWER SYS" transform="translate(493 354)" font-size="17" class="titles"><tspan x
                         <path id="TERR_BUTTON_PATH" data-name="Path 149" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1784.222 490.545)" fill="#9a9a9a"/>
                         <g id="Rectangle_148" data-name="Rectangle 148" transform="translate(267.462 393.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="97.608" height="49" fill="none"/>
+                            <rect id="CTR_BUTTON" x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
                         <g id="Rectangle_158" data-name="Rectangle 158" transform="translate(477.42 200.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
@@ -1167,13 +1167,13 @@ POWER SYS" transform="translate(493 354)" font-size="17" class="titles"><tspan x
                             <rect width="169.781" height="270.834" rx="18" stroke="none"/>
                             <rect x="1" y="1" width="167.781" height="268.834" rx="17" fill="none"/>
                         </g>
-                        <path id="Path_150" data-name="Path 150" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1888.222 417.836)" fill="#9a9a9a"/>
                         <path id="Path_159" data-name="Path 159" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1678.265 224.836)" fill="#9a9a9a"/>
                         <text id="RST" transform="translate(523.929 423.264)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">STD</tspan></text>
                         <path id="STD_BUTTON_PATH" data-name="Path 160" d="M2155.718-24.3V28.9l4.841-4.136v-44.9l115.223.026,4.142-4.064Z" transform="translate(-1675.827 412.967)" fill="#9a9a9a"/>
                         <path id="Path_157" data-name="Path 157" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1834.095 152.836)" fill="#9a9a9a"/>
                         <path id="Path_158" data-name="Path 158" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1940.597 152.967)" fill="#333"/>
                         <text id="CTR" transform="translate(300.267 428.134)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">CTR</tspan></text>
+                        <path id="CTR_BUTTON_PATH" data-name="Path 150" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1888.222 417.836)" fill="#9a9a9a"/>
                         <text id="BARO_PRESSURE_VALUE" data-name="BARO_PRESSURE_VALUE" transform="translate(498.26 235.134)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">---</tspan></text>
                         <g id="IN_SWITCH">
                             <path id="Path_164" data-name="Path 164" d="M2532.252,1540l-9.8,12.819,9.8,14.022,10.121-14.022Z" transform="translate(-2034.419 -1258.329)" fill="#727272" stroke="#9a9a9a" stroke-width="2"/>
@@ -1190,17 +1190,17 @@ POWER SYS" transform="translate(493 354)" font-size="17" class="titles"><tspan x
                         <text id="CAPT-2" data-name="CAPT" transform="translate(242.495 163.134)" fill="#ededed" class="button-titles" font-weight="700"><tspan x="0" y="0">CAPT</tspan></text>
                         <g id="Rectangle_149" data-name="Rectangle 149" transform="translate(215.462 337.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="97.608" height="49" fill="none"/>
+                            <rect id="MINUS_BUTTON" x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
-                        <path id="Path_151" data-name="Path 151" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1940.222 361.836)" fill="#9a9a9a"/>
+                        <path id="MINUS" data-name="Path 153" d="M3025.87,2510.175h34.045" transform="translate(-2776 -2147)" fill="none" stroke="#ededed" stroke-width="6"/>
+                        <path id="MINUS_BUTTON_PATH" data-name="Path 151" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1940.222 361.836)" fill="#9a9a9a"/>
                         <g id="Rectangle_150" data-name="Rectangle 150" transform="translate(319.462 337.666)" fill="#727272" stroke="#333" stroke-width="4">
                             <rect width="101.608" height="53" stroke="none"/>
-                            <rect x="2" y="2" width="97.608" height="49" fill="none"/>
+                            <rect id="PLUS_BUTTON" x="2" y="2" width="97.608" height="49" fill="none"/>
                         </g>
-                        <path id="Path_152" data-name="Path 152" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1836.222 361.836)" fill="#9a9a9a"/>
-                        <path id="Path_153" data-name="Path 153" d="M3025.87,2510.175h34.045" transform="translate(-2776 -2147)" fill="none" stroke="#ededed" stroke-width="6"/>
-                        <path id="Path_154" data-name="Path 154" d="M3025.87,2510.175h34.045" transform="translate(-2671 -2147)" fill="none" stroke="#ededed" stroke-width="4"/>
-                        <path id="Path_155" data-name="Path 155" d="M3032.423,2483.555V2516.9" transform="translate(-2660.944 -2137)" fill="none" stroke="#ededed" stroke-width="4"/>
+                        <path id="PLUS_1" data-name="Path 154" d="M3025.87,2510.175h34.045" transform="translate(-2671 -2147)" fill="none" stroke="#ededed" stroke-width="4"/>
+                        <path id="PLUS_2" data-name="Path 155" d="M3032.423,2483.555V2516.9" transform="translate(-2660.944 -2137)" fill="none" stroke="#ededed" stroke-width="4"/>
+                        <path id="PLUS_BUTTON_PATH" data-name="Path 152" d="M2155.717-24.3V28.9l3.962-4.136v-44.9l93.57-.018,4.04-3.971Z" transform="translate(-1836.222 361.836)" fill="#9a9a9a"/>
                         <g id="Rectangle_153" data-name="Rectangle 153" transform="translate(215.459 183.666)" fill="#155700" stroke="#9a9a9a" stroke-width="4">
                             <rect width="207.608" height="53" stroke="none"/>
                             <rect x="2" y="2" width="203.608" height="49" fill="none"/>
