FIXED missing range rings/selected heading/middle range value

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html
@@ -1,11 +1,11 @@
 ﻿<link rel="stylesheet" href="./B787_10_ND.css"/>
 
 <script type="text/html" id="B787_10_ND_Template">
-    <svg id="FakeMapBox" viewBox="0 0 600 600" irs-state="off">
+    <svg id="FakeMapBox" viewBox="0 0 600 600" irs-state="aligned">
         <text x="300" y="320">MAP</text>
         <path d="M273 307L273 334L326 334L326 307L273 307"></path>
     </svg>
-    <div id="Map" irs-state="off">
+    <div id="Map" irs-state="aligned">
         <map-instrument id="MapInstrument" map-mode="plan" bing-id="MFD" bing-ref="plane" show-overlay="false"
                         config-path="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/"></map-instrument>
     </div>
@@ -98,7 +98,7 @@
         </div>
     </jet-mfd-nd-info>
 
-    <svg id="FakeCompassBox" viewBox="0 0 600 600" irs-state="off">
+    <svg id="FakeCompassBox" viewBox="0 0 600 600" irs-state="aligned">
         <text x="264" y="80" fill="green" font-size="22" font-family="Roboto-Bold" text-anchor="end"
               alignment-baseline="central">HDG
         </text>
@@ -111,31 +111,31 @@
         <path d="M 268.5 60 L 268.5 99 L 331 99 L 331 60" stroke-width="1" stroke="green" fill="none"></path>
     </svg>
 
-    <svg id="FakeCompassBoxHdg" viewBox="0 0 600 600" irs-state="off">
+    <svg id="FakeCompassBoxHdg" viewBox="0 0 600 600" irs-state="aligned">
         <text x="300" y="80">HDG</text>
         <path d="M273 65L273 95L326 95L326 65L273 65"></path>
     </svg>
 
-    <svg id="align-times" irs-state="off">
-        <text id="GS_FakeText" class="Small" x="22" y="45" alignment-baseline="baseline" irs-state="off">GS</text>
-        <text id="GS_FakeValue" class="Value" x="50" y="45" alignment-baseline="baseline" irs-state="off">---</text>
+    <svg id="align-times" irs-state="aligned">
+        <text id="GS_FakeText" class="Small" x="22" y="45" alignment-baseline="baseline" irs-state="aligned">GS</text>
+        <text id="GS_FakeValue" class="Value" x="50" y="45" alignment-baseline="baseline" irs-state="aligned">---</text>
         <!-- --- -->
-        <text id="time-to-align" class="align" x="13" y="70" alignment-baseline="baseline" irs-state="off">TIME TO
+        <text id="time-to-align" class="align" x="13" y="70" alignment-baseline="baseline" irs-state="aligned">TIME TO
             ALIGN
         </text>
-        <text id="l-align" class="align align-value" x="13" y="90" alignment-baseline="baseline" irs-state="off">05:53
+        <text id="l-align" class="align align-value" x="13" y="90" alignment-baseline="baseline" irs-state="aligned">05:53
         </text>
     </svg>
 
-    <svg id="align-times2" irs-state="off">
-        <text id="GS_FakeText2" class="Small" x="25" y="55" alignment-baseline="baseline" irs-state="off">GS</text>
+    <svg id="align-times2" irs-state="aligned">
+        <text id="GS_FakeText2" class="Small" x="25" y="55" alignment-baseline="baseline" irs-state="aligned">GS</text>
         <text id="GS_FakeValue2" class="Value" x="74" y="50" style="font-size: 40px;" alignment-baseline="baseline"
-              irs-state="off">---
+              irs-state="aligned">---
         </text> <!-- --- -->
-        <text id="time-to-align2" class="align" x="25" y="90" alignment-baseline="baseline" irs-state="off">TIME TO
+        <text id="time-to-align2" class="align" x="25" y="90" alignment-baseline="baseline" irs-state="aligned">TIME TO
             ALIGN
         </text>
-        <text id="l-align2" class="align align-value" x="25" y="125" alignment-baseline="baseline" irs-state="off">
+        <text id="l-align2" class="align align-value" x="25" y="125" alignment-baseline="baseline" irs-state="aligned">
             05:53
         </text>
     </svg>
