--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.html
@@ -79,14 +79,14 @@
                 <div class="top">
                     <div id="HorizonContainer">
 
-                        <div id="FakeBlackMask" irs-state="off">
+                        <div id="FakeBlackMask" irs-state="aligned">
                             <svg id="FakeMaskSvg" version="1.1" viewBox="0 0 600 600 " xmlns="http://www.w3.org/2000/svg">
-                                <rect id="AttBox" x="182" y="204" width="54" height="27" irs-state="off" />
-                                <text id="AttText" x="209" y="217.5" irs-state="off">ATT</text>
+                                <rect id="AttBox" x="182" y="204" width="54" height="27" irs-state="aligned" />
+                                <text id="AttText" x="209" y="217.5" irs-state="aligned">ATT</text>
 
-                                <rect id="VertBox" x="485" y="205" width="26" height="85" irs-state="off" />
+                                <rect id="VertBox" x="485" y="205" width="26" height="85" irs-state="aligned" />
 
-                                <text id="VertText" transform="rotate(90)" x="226" y="-492" irs-state="off">
+                                <text id="VertText" transform="rotate(90)" x="226" y="-492" irs-state="aligned">
                                     <tspan id="VertTextSpan" rotate="270 270 270 270 0">VERT</tspan>
                                 </text>
 
@@ -97,7 +97,7 @@
                     </div>
                     <div id="InstrumentsContainer">
                         <jet-pfd-altimeter-indicator id="Altimeter"></jet-pfd-altimeter-indicator>
-                        <jet-pfd-vspeed-indicator id="VSpeed" irs-state="off"></jet-pfd-vspeed-indicator>
+                        <jet-pfd-vspeed-indicator id="VSpeed" irs-state="aligned"></jet-pfd-vspeed-indicator>
                         <jet-pfd-airspeed-indicator id="Airspeed"></jet-pfd-airspeed-indicator>
                         <jet-pfd-ils-indicator id="ILS"></jet-pfd-ils-indicator>
                     </div>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="bottom">
-                    <svg id="FakeHdgSvg" version="1.1" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg" irs-state="off">
+                    <svg id="FakeHdgSvg" version="1.1" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg" irs-state="aligned">
                         <rect id="FakeHdgBox" x="280" y="1" width="40" height="20"/>
                         <text id="FakeHdgText" x="300" y="10">HDG</text>
                     </svg>
@@ -115,8 +115,8 @@
                                         show-bing-map="false"
                                         config-path="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/"></map-instrument>
                     </div>
-                    <jet-pfd-nd-compass id="Compass" display-mode="arc" irs-state="off"></jet-pfd-nd-compass>
-                    <b787-10-pfd-compass-infos id="CompassInfos" irs-state="off"></b787-10-pfd-compass-infos>
+                    <jet-pfd-nd-compass id="Compass" display-mode="arc" irs-state="aligned"></jet-pfd-nd-compass>
+                    <b787-10-pfd-compass-infos id="CompassInfos" irs-state="aligned"></b787-10-pfd-compass-infos>
                 </div>
             </div>
         </div>
