INVALID DELETE uses new FMCMessageManager and not scratchpad

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -227,6 +227,8 @@
 <script type="text/html" import-script="/B78XH/Autopilot/B78XHNavModeSelector.js"></script>
 <script type="text/html" import-script="/B78XH/Directors/SpeedDirector.js"></script>
 <script type="text/html" import-script="/B78XH/DataHolders/FMC/FMCDataHolder.js"></script>
+<script type="text/html" import-script="/B78XH/DataHolders/FMC/FMCMessagesHolder.js"></script>
+<script type="text/html" import-script="/B78XH/Managers/FMCMessagesManager.js"></script>
 <script type="text/html"
         import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Heavy/Enums/B78XH_LocalVariables.js"></script>
