fixed pre flight label

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -635,13 +635,13 @@
                         </div>
                     </foreignobject>
                     <foreignobject>
-                        <div id="CT6-FOREIGN"
+                        <div id="CT6-FOREIGN" class="separator-label"
                              style="background-color:transparent;color:#fff;display:block;font-family:Consolas;font-size:22px;font-variant-caps:normal;font-variant-east-asian:normal;font-variant-ligatures:normal;font-variant-numeric:normal;height:25px;left:71px;letter-spacing:-.73px;line-height:1.25;margin:0;position:absolute;text-align:center;text-anchor:middle;top:375px;width:498px">
                             .
                         </div>
                     </foreignobject>
                     <foreignobject>
-                        <div id="CL6-FOREIGN" class="separator-label"
+                        <div id="CL6-FOREIGN"
                              style="background-color:transparent;color:#fff;display:block;font-family:Consolas;font-size:24px;font-variant-caps:normal;font-variant-east-asian:normal;font-variant-ligatures:normal;font-variant-numeric:normal;height:25px;left:71px;letter-spacing:-.73px;line-height:1.25;margin:0;position:absolute;text-align:center;text-anchor:middle;top:403px;width:498px">
                             .
                         </div>
