HD logger not need to be imported because logger is automatically bundled in HDFMC module. Import removed.

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -886,6 +886,8 @@
 <script import-script="/Heavy/Enums/B78XH_LocalVariables.js" type="text/html"></script>
 <script import-script="/Heavy/Utils/HeavyEventDispatcher.js" type="text/html"></script>
 <script import-script="/Heavy/Utils/UpdateDelayer.js" type="text/html"></script>
+<!-- HDLogger should be packed into HDSDK in future (or not)-->
+<script import-script="/Heavy/libs/hdlogger.js" type="text/html"></script>
 <script import-script="/Heavy/libs/hdsdk.js" type="text/html"></script>
 
 <script import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/hdfmc.js" type="text/html"></script>
