fixes of exec added simbrief configuration

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -345,7 +345,7 @@
                                style="font-family:Consolas;font-weight:bold;stroke-width:.5;stroke:#000000">EXEC
                         </tspan>
                     </text>
-                    <rect id="exec-emit" x="564" y="494.25" width="54" height="12"
+                    <rect class="exec-emit-class" x="564" y="494.25" width="54" height="12"
                           style="fill-opacity:.43922;fill:#8c8cc0;font-variation-settings:'wdth' 100, 'wght' 400;stroke-linecap:round;stroke-linejoin:round;stroke:#000"/>
                     <foreignObject id="MK1-BUTTON" x="11.25" y="486.25" width="75.5" height="51">
                         <div style="background-color:rgba(114,109,114,0);border-bottom-color:#696470;border-color:#696470;border-left-color:#716674;border-right-color:#767078;border-style:outset;border-top-color:#696470;border-width:3px;height:50.5px;"></div>
