added date and time

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -400,6 +400,20 @@
                     </foreignObject>
                 </g>
                 <g id="static">
+                    <text id="TIME" class="remove-pointers" x="15" y="30"
+                          style="fill:#ffffff;font-family:Consolas;font-size:24px;font-variation-settings:'wdth' 100, 'wght' 400;letter-spacing:-.5px;line-height:0.75;stroke-width:.5;text-align:start;text-anchor:start"
+                          xml:space="default">
+                        <tspan id="TIME-TSPAN" class="fms-time" x="15" y="30"
+                               style="font-family:Consolas;font-weight:bold;stroke-width:.5;stroke:#000000">00:00:30 z
+                        </tspan>
+                    </text>
+                    <text id="DATE" class="remove-pointers" x="620" y="30"
+                          style="fill:#ffffff;font-family:Consolas;font-size:24px;font-variation-settings:'wdth' 100, 'wght' 400;letter-spacing:-.5px;line-height:0.75;stroke-width:.5;text-align:end;text-anchor:end"
+                          xml:space="default">
+                        <tspan id="DATE-TSPAN" class="fms-date" x="620" y="30"
+                               style="font-family:Consolas;font-weight:bold;stroke-width:.5;stroke:#000000">01 AUG 20
+                        </tspan>
+                    </text>
                     <rect id="LSK1-DASH" x="49.55" y="107.55" width="16.9" height="3.9" ry="1.95"
                           style="fill:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.1;stroke:#000"/>
                     <rect id="LSK2-DASH" x="49.55" y="168.55" width="16.9" height="3.9" ry="1.95"
