fixed html error

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -129,7 +129,7 @@
                           style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_INIT"/>
                     <rect id="MK2" class="mk-btn" x="89.25" y="486.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;paint-order:normal;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#726d72;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_RTE"/>
                     <rect id="MK3" class="mk-btn" x="167.25" y="486.25" width="75.5" height="49.5"
                           style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
