--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.html
@@ -1,19 +1,35 @@
 <link rel="stylesheet" type="text/css" href="B787_10_VSD.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <html>
     <head>
         <body>
-            <div class="backpane">i</div>
 
-<div class="waypoint1">DOCKR</div>
+    <div id="a">
+    <div id="b">
+        <div id="c"></div>
+    </div>
+</div>
 
-<div class="waypoint2">EVOSE</div>
+<div class="waypoints">
 
-<div class="waypoint3">MKGEE</div>
+<div id="waypoint1">DOCKR</div> 
 
-<div class="waypoint4">DARRK</div>
+<div id="waypoint2">EVOSE</div>
 
-<div class="waypoint5">SUMMR</div>
-        </body> 
-    </head>
+<div id="waypoint3">MKGEE</div>
+
+<div id="waypoint4">DARRK</div>
+
+<div id="waypoint5">SUMMR</div>
+</div>
+
+<div class="line1"></div>
+<div class="line2"></div>
+<div class="line3"></div>
+<div class="line4"></div>
+<div class="line5"></div>
+<div class="planemarker"></div>
+        </body>          
+     </head>  
 </html>
